feat-SYS-33a30: Server registration

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a29.2 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+Текущая версия 33a30 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
@@ -116,6 +116,33 @@
         меню, так и в настройках): зеленый - обновление необязательно, желтый -
         желательно  обновить   движок,   оранжевый   -   крайне   рекомендуется
         обновление, красный - ошибка проверки версии 
+[!] Админка: Регистрация сервера
+    Регистрация сервера нужна для  ряда  запросов  к  серверу  обновлений.  При
+    регистрации передается минимум информации,  необходимой  для  идентификации
+    сервера. В частности, передается:
+      Полный URL сервера - т.е.  HTTP-адрес  и  подкаталог  сервера.  Например:
+      http://myserver.com/myfolder/. Это необходимо для первичной идентификации
+      сервера. Полный путь необходим для того, что бы различать несколько копий
+      СверхНовой, установленных на одном IP или домене.
+      Внутреннее название сервера. Используется для подстановки в сообщения.
+    Зачем  вообще  регистрировать  свой  сервер?  В  будующем  планируется  ряд
+    возможностей, которые буду доступны только зарегистрированным  серверам.  В
+    их число входит (отсортированы по запланированным срокам реализации):
+     автоматическое получение чейнджлога
+     автоматическое обновление движка
+     участие в рейтинге серверов
+     багрепорты от администраторов серверов
+     прямой чат с разработчиками движка
+     удаленная диагностика сервера
+     и многое другое
+    Зачем регистрировать свой сервер прямо сейчас?
+      Администраторы  зарегестрированных   серверов   могут   рассчитывать   на
+      дополнительное внимание разработчиков при диагностике проблем серверов  и
+      обработке багрепортов.
+      При регистрации кроме индивидуального ключа серверу  выдается  уникальный
+      идентификационный  номер,  который  будет  использоваться  при  первичной
+      сортировке серверов. Чем  раньше  будет  зарегистрирован  сервер  -  тем,
+      например, выше он будет в общем каталоге серверов...
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
     сервера
