fix-INT-33a30.1: Small interface fixes to login/registration pages

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a30 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+Текущая версия 33a30.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
@@ -86,63 +86,62 @@
        возможность получить эффективный уровень Наемников больше максимального
 
 [!] Иконка сайта: Новая иконка сайта! Мегареспект ув.Помощнику Ivash!
-[!] Админка: Проверка версии
-    На страницу настроек сервера добавлена возможность проверки текущей  версии
-    движка на предмет необходимости  обновления.
-    1. При проверке версии передаются только анонимные данные - текущая  версия
-       БД, номер релиза и версия игры.
-    2. При проверке движок обращается через HTTP на сервер проверки версий.
-    3. Если установлен CURL и подключен к PHP, то  для  проверки  версии  будет
+[!] Запущен сервер обновлений.
+    1. Движок сервера общается с сервером обновлений по протоколу HTTP.
+    2. Если установлен CURL и подключен к PHP, то  для  проверки  версии  будет
        использован именно он. Убедитесь, что  CURL  правильно  настроен  и  ему
        разрешен доступ к внешним ресурсам
-    4. Если CURL не установлен, будет осущствлена попытка получить версию через
+    3. Если CURL не установлен, будет осущствлена попытка получить версию через
        file_get_contents(). Убедитесь,  что  в  PHP  разрешается  обращаться  к
        внешним сайтам через соответствующую функцию
-    5. Результат проверки - рекомендация  сервера  обновлений  о  необходимости
+    В  настоящее  время  сервер  обновлений  поддерживает  следующие   функции:
+    проверка версии движка и регистрация сайта.  Доступ  к  ним  осуществляется
+    из админки со страницы настроек сервера
+    1. При проверке версии передаются только анонимные данные - текущая  версия
+       БД, номер релиза и версия игры.
+    2. Результат проверки - рекомендация  сервера  обновлений  о  необходимости
        обновления текущей версии игры
-    6. Есть два варианта проверки версии: ручная и автоматическая
-    7. Ручная проверка версии выполняется в ручном  режиме  по  нажатию  кнопки
+    3. Есть два варианта проверки версии: ручная и автоматическая
+    4. Ручная проверка версии выполняется в ручном  режиме  по  нажатию  кнопки
        "Проверить версию" на странице настроек.
-    8. Автоматическая проверка версии (по умолчанию -  отключена)  производится
+    5. Автоматическая проверка версии (по умолчанию -  отключена)  производится
        самостоятельно движком по расписанию. Как и при ручной,  передается  тот
        же объем анонимных данных
-    9. Период автоматической проверки версии  задается  в  секундах  в  таблице
+    6. Период автоматической проверки версии  задается  в  секундах  в  таблице
        config  переменной  server_updater_check_period.  По  умолчанию   период
        проверки равен 24 часам (раз в сутки).
-    10. Результат и время последней проверки выводится в левом меню.
-    11. Результат и время последней  проверки  так  же  выводится  на  странице
-        настроек.
-    12. Предусмотрено цветовое кодирование результатов проверки  (как  в  левом
-        меню, так и в настройках): зеленый - обновление необязательно, желтый -
-        желательно  обновить   движок,   оранжевый   -   крайне   рекомендуется
-        обновление, красный - ошибка проверки версии 
-[!] Админка: Регистрация сервера
+    7. Результат и время последней проверки выводится в левом меню.
+    8. Результат и время  последней  проверки  так  же  выводится  на  странице
+       настроек.
+    9. Предусмотрено цветовое кодирование результатов  проверки  (как  в  левом
+       меню, так и в настройках): зеленый - обновление необязательно, желтый  -
+       желательно обновить движок, оранжевый - крайне рекомендуется обновление,
+       красный - ошибка проверки версии
     Регистрация сервера нужна для  ряда  запросов  к  серверу  обновлений.  При
     регистрации передается минимум информации,  необходимой  для  идентификации
-    сервера. В частности, передается:
-      Полный URL сервера - т.е.  HTTP-адрес  и  подкаталог  сервера.  Например:
-      http://myserver.com/myfolder/. Это необходимо для первичной идентификации
-      сервера. Полный путь необходим для того, что бы различать несколько копий
-      СверхНовой, установленных на одном IP или домене.
-      Внутреннее название сервера. Используется для подстановки в сообщения.
+    сервера:
+    1. Полный URL сервера - т.е. HTTP-адрес  и  подкаталог  сервера.  Например:
+       http://myserver.com/myfolder/.    Это    необходимо    для     первичной
+       идентификации сервера. Полный путь необходим для того, что бы  различать
+       несколько копий СверхНовой, установленных на одном IP или домене.
+    2. Внутреннее название сервера. Используется для подстановки в сообщения.
     Зачем  вообще  регистрировать  свой  сервер?  В  будующем  планируется  ряд
     возможностей, которые буду доступны только зарегистрированным  серверам.  В
     их число входит (отсортированы по запланированным срокам реализации):
-     автоматическое получение чейнджлога
-     автоматическое обновление движка
-     участие в рейтинге серверов
-     багрепорты от администраторов серверов
-     прямой чат с разработчиками движка
-     удаленная диагностика сервера
-     и многое другое
+    1. Автоматическое получение чейнджлога
+    2. Автоматизированное обновление движка
+    3. Участие в рейтинге серверов
+    4. Багрепорты от администраторов серверов
+    5. Чат для администраторов серверов
+    6. По запросу - удаленная диагностика сервера
+    7. ...и многое, многое другое
     Зачем регистрировать свой сервер прямо сейчас?
-      Администраторы  зарегестрированных   серверов   могут   рассчитывать   на
-      дополнительное внимание разработчиков при диагностике проблем серверов  и
-      обработке багрепортов.
-      При регистрации кроме индивидуального ключа серверу  выдается  уникальный
-      идентификационный  номер,  который  будет  использоваться  при  первичной
-      сортировке серверов. Чем  раньше  будет  зарегистрирован  сервер  -  тем,
-      например, выше он будет в общем каталоге серверов...
+    1. Запросы от администраторов  зарегестрированных  серверов  имеют  больший
+       приоритет при диагностике проблем и обработке багрепортов.
+    2. При регистрации кроме индивидуального ключа серверу выдается  уникальный
+       идентификационный номер,  который  будет  использоваться  при  первичной
+       сортировке серверов. Чем раньше  будет  зарегистрирован  сервер  -  тем,
+       например, выше он будет в общем каталоге серверов...
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
     сервера
