--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a30.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a31 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
@@ -395,12 +395,6 @@
 [@] JS: Обновлен jQuery до версии 1.7.1. Обновлен jQuery-UI до версии 1.8.17
 [@] БД: Доработан дамп. Теперь по умолчанию новосоздаваемый игрок имеет мужской
     пол - так же, как и дефолтный администраторский аккаунт
-[@] Строительство: Файлы с функциями строительства  зданий/исследований/обороны
-    перенесены в каталог /includes/includes и теперь  подключаются  только  при
-    вызове соответствующих страниц. Это  позволило  заметно  сократить  размеры
-    кода в памяти сервера
-[@] Статистика: файл с функциями  статистики  /functions/sys_stat_functions.php
-    перемещен в /includes/includes/sys_stat.php
 [@] Локализация: Все строки локализации, относящиеся к  наемникам,  вынесены  в
     файл mrc_mercenary.mo
 [@] Исследования: Исследования теперь завернуты в  транзакции  -  это  позволит
@@ -408,15 +402,21 @@
     медленных соединениях
 [@] Файл todo.txt заменен на todo.xls
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
-[@] Файлы: Удалены неиспользуемые файлы faq.php, faq1.php, faq2.php
 [@] Чёрный Рынок: Почищены языковые файы от неиспользуемых строк
 [@] Темплейты
     Расширение файлов темплейтов изменено с ".tpl" на ".tpl.html" для  большего
     удобства разработки
     Теперь при использовании директивы <!--  INCLUDE  -->  НЕ  НУЖНО  указывать
     расширение подключаемого файла
-[@]   Файлы   из    /includes/fleet    и    /includes/market    перенесены    в
-    /includes/includes
+[@] Файлы: Удалены неиспользуемые файлы faq.php, faq1.php, faq2.php
+[@] Файлы: Сильно переработана организация файлов PHP
+    Многие процедуры поменяли свое местоположение
+    Множество файлов теперь не грузятся  автоматически  при  старте  движка,  а
+    грузятся лишь по потребности. В частности - все файлы  миссий  подгружаются
+    только в менеджере летящих флотов,  а  сам  менеджер  грузится  только  при
+    потребности в обработке флотов.  Кроме  того,  боевой  движок  подгружается
+    только в симуляторе и при обсчете боев (Миссии "Атака" и "Уничтожить")
+    Все это позволило заметно сократить размеры кода в памяти сервера
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
