misc-MOD-33a31.2: Changed path for modules bootstrap

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a31.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+Текущая версия 33a31.2 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
@@ -359,6 +359,9 @@
     Редизайн основного экрана и экрана обмена ресурсов
     Откуда взялась эта странная надпись? Очень странно...
 [~] Меню: Переработано меню
+[~] Чат: Тэг  Альянса  после  имени  игрока  теперь  указывается  в  квадратных
+    скобках, а адресат сообщения - в круглых. Сделано для унификации  написания
+    тэга Альянса в движке
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
@@ -418,6 +421,8 @@
     потребности в обработке флотов.  Кроме  того,  боевой  движок  подгружается
     только в симуляторе и при обсчете боев (Миссии "Атака" и "Уничтожить")
     Все это позволило заметно сократить размеры кода в памяти сервера
+[@] Модули: Загрузчики модулей теперь располагаются в каталоге /modules, а не в
+    /modules/_functions
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
