doc: docs editing

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -1,3 +1,9 @@
+Проект "Сверхновая"
+~~~~~~~~~~~~~~~~~~~
+"Сверхновая"  (далее  -  СН)  -  многопользовательская  браузерная  космическая
+стратегия, клон oGame. СН базируется на  XNova  RageRepack  v.226  (далее  RR).
+Данный файл содержит инструкции по установке СН
+
 Disclaimer aka Отмазка
 ======================
 ВНИМАНИЕ! Проект находится в стадии  альфа-версии!  В  настоящее  время  он  не
@@ -15,10 +21,15 @@ Disclaimer aka Отмазка
 ВНИМАНИЕ! Статус проекта "Сверхновая" - альфа-версия. Практически это означает,
 что очередной апдейт может полностью изменить отдельный аспект игры.
 
-Примерный план развития движка содержится в файле docs/changelog.todo
+Примерный план развития движка содержится в файле /docs/changelog.xls
 
-Код распространяется под лицензией GNU GENERAL PUBLIC  LICENSE  Version  2,
-June 1991. Сама лицензия находится в файле docs/license.txt дистрибутива.
+Код распространяется под лицензией GNU GENERAL PUBLIC LICENSE Version  2,  June
+1991. Сама лицензия находится в файле /docs/license.txt дистрибутива.
+
+Доолнение к лицензии: движок является полностью бесплатным  до  тех  пор,  пока
+сохраняются мои копирайты. Так же вы не имеете права  продавать  сам  движок  и
+любые продукты на его основе (однако имеете право взимать  плату  за  доступ  к
+игре и/или продавать внутриигровые ресурсы).
 
 
 Предуведомления о необходимости наличия квалификации
@@ -75,7 +86,9 @@ XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
 список подсистем и соответствующих файлов/папок
 [*] Подсистема кэширования темплейтов - каталог  /cache.  Без  этого  темплейты
     каждый раз будут рендериться заново
-[*] Подсистема аватаров нуждается в доступе на запись в каталог /images/avatar
+[*] Для корректной работы подсистемы  аватаров  в  PHP  должен  быть  корректно
+    настроен временный каталог и движку должна быть разрешена запись в  каталог
+    /images/avatar
 [*] Для работы подсистемы предупреждения о попытках взлома аккаунту веб-сервера
     должна быть разрешена  запись  на  диск  в  файл  /badqrys.txt.  Без  этого
     "плохие" запросы не будут сохранятся
@@ -384,6 +397,7 @@ https://github.com/supernova-ws/SuperNova/archives/trunk
 ссылке выше и там щелкнуть кнопку. Переход по прямой ссылке на загружаемый файл
 – не сработает.
 На название файла внимание обращать не нужно.
+
 !!!ВНИМАНИЕ!!! Диагностику нужно проводить на отдельной БД  и  отдельной  копии
 движка! НИ В КОЕМ СЛУЧАЕ НЕЛЬЗЯ ПРОВОДИТЬ ДИАГНОСТИКУ НА ЖИВОМ СЕРВЕРЕ!!!
 
@@ -416,31 +430,54 @@ https://github.com/supernova-ws/SuperNova/archives/trunk
 выявить проблемы в работе СН на каждом отдельно взятом сервере.
 
 
+
 Ссылки
-======
-Основной сайт проекта: http://supernova.ws
+~~~~~~
+Основной сайт проекта:
+  http://supernova.ws
+
 
 Форумы
-------
-Форум проекта: http://forum.supernova.ws
-Форум поддержки: http://forum.supernova.ws/viewforum.php?f=73
-Форум для багрепортов: http://forum.supernova.ws/viewforum.php?f=65
+======
+Форум проекта:
+  http://forum.supernova.ws
+Форум поддержки сторонних серверов:
+  http://forum.supernova.ws/viewforum.php?f=73
+
+Форумы для багрепортов
+  Для ошибок, уникальных для сторонних серверов (ru/en)
+    http://forum.supernova.ws/viewforum.php?f=78
+  Для ошибок, присутствующих в текущей версии СН на официальных серверах
+    http://forum.supernova.ws/viewforum.php?f=65
+
 
 Сверхновая на github
---------------------
-Страница проекта: http://github.com/supernova-ws/SuperNova
-Загрузка движка: https://github.com/supernova-ws/SuperNova/archives/master
-Репозиторий: git://github.com/supernova-ws/SuperNova.git
+====================
+Страница проекта:
+  http://github.com/supernova-ws/SuperNova
+
+Загрузка движка:
+  https://github.com/supernova-ws/SuperNova/archives/master
+
+Репозиторий:
+  git://github.com/supernova-ws/SuperNova.git
+
 
 Сверхновая на sourceforge
---------------------
-Страница проекта: http://sourceforge.net/projects/supernova-ws/
-Загрузка движка: http://sourceforge.net/projects/supernova-ws/files/
-Репозиторий: git://supernova-ws.git.sourceforge.net/gitroot/supernova-ws/supernova-ws
+=========================
+Страница проекта:
+  http://sourceforge.net/projects/supernova-ws/
+
+Загрузка движка:
+  http://sourceforge.net/projects/supernova-ws/files/
+
+Репозиторий:
+  git://supernova-ws.git.sourceforge.net/gitroot/supernova-ws/supernova-ws
+
 
 
 Помощь проекту
-==============
+~~~~~~~~~~~~~~
 Вы можете помочь проекту, отправив WebMoney на кошельки:
   WMZ (WM-USD) Z409323360409
   WMR (WM-RUB) R961266352219
