feat-SYS-33c0: Project SuperNova.WS Release 33 RC

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a32 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33с0 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
@@ -41,7 +41,7 @@
        рекрутировать Наемников - соответственно пункты "Технологии  Альянса"  и
        "Наемники Альянса" на странице управления
     5. После достижения минимально необходимого размера Альянса (10 человек  по
-       умолчанию, задается  в  таблице  `config`  записью  'ali_members_bonus')
+       умолчанию, задается  в  таблице  `config`  записью  'ali_bonus_members')
        каждый член Альянса получает бонус к своим Наемникам и технологиям
     6. Значение бонуса зависит от количества игроков в Альянсе и вычисляется по
        формуле: Бонус = round(уровень  технологии  или  Наемника  /  количество
@@ -1824,8 +1824,8 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 
 2010-10-30 21:57
 [%] Строительство/Оборона:   Исправлена   ошибка,   когда   при   одновременной
-    постановке МПР и ПРО в очередь  можно  было  построить  больше  ракет,  чем
-    емкость ракетной шахты
+    постановке ракет и перехватчиков в  очередь  можно  было  построить  больше
+    ракет, чем емкость ракетной шахты
 
 2010-10-30 21:45
 [%] Альянсы: Исправлена ошибка, когда при существующей форме запроса  приема  в
