doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,6 +12,11 @@
 Текущая версия 33с0 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+[@] ВНИМАНИЕ!!! В этой версии скорректирована работа партнерской  программы,  а
+    так же повторно применен патч для масштабирования ТМ -  для  тех  серверов,
+    где он не был применен  раньше.  Если  вы  вносили  изменения  в  настройки
+    партнерской системы или начисления ТМ - сверьте текущие настройки в таблице
+    "confing" с эталонными настройками в конце файла /docs/sql/supernova.sql!
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
     ранней версии PHP, или используйте предыдущую версию СН.
@@ -84,6 +89,8 @@
        игроку отдельно
     7. То же самое распространяется и на Наемников. При этом только Альянс дает
        возможность получить эффективный уровень Наемников больше максимального
+    Дополнительно доступны еще три метода  расчета  бонусов.  Подробнее  см.  в
+    /docs/readme.txt
 
 [!] Иконка сайта: Новая иконка сайта! Мегареспект ув.Помощнику Ivash!
 [!] Запущен сервер обновлений.
