--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,14 +9,14 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33с0 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33c0.1 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! В этой версии скорректирована работа партнерской  программы,  а
     так же повторно применен патч для масштабирования ТМ -  для  тех  серверов,
     где он не был применен  раньше.  Если  вы  вносили  изменения  в  настройки
     партнерской системы или начисления ТМ - сверьте текущие настройки в таблице
-    "confing" с эталонными настройками в конце файла /docs/sql/supernova.sql!
+    "config" с эталонными настройками в конце файла /docs/sql/supernova.sql!
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
     ранней версии PHP, или используйте предыдущую версию СН.
@@ -34,7 +34,7 @@
 
 [#] Альянсы:   Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
     технологии!
-    1. Каждый Альянс имеет счет с ресурсами металл/кристалл/дейтрий/ТМ
+    1. Каждый Альянс имеет счет с ресурсами металл/кристалл/дейтерий/ТМ
     2. Член Альянса может перевести ресурсы на счет Альянса. Сделать это  можно
        на главной странице Альянса в разделе "Ресурсы Альянса".  Там  же  можно
        увидеть состояние счета Альянса и бонусы, предоставляемые Альянсом  (см.
@@ -98,8 +98,8 @@
     2. Если установлен CURL и подключен к PHP, то  для  проверки  версии  будет
        использован именно он. Убедитесь, что  CURL  правильно  настроен  и  ему
        разрешен доступ к внешним ресурсам
-    3. Если CURL не установлен, будет осущствлена попытка получить версию через
-       file_get_contents(). Убедитесь,  что  в  PHP  разрешается  обращаться  к
+    3. Если CURL не установлен,  будет  осуществлена  попытка  получить  версию
+       через file_get_contents(). Убедитесь, что в PHP разрешается обращаться к
        внешним сайтам через соответствующую функцию
     В  настоящее  время  сервер  обновлений  поддерживает  следующие   функции:
     проверка версии движка и регистрация сайта.  Доступ  к  ним  осуществляется
@@ -132,7 +132,7 @@
        идентификации сервера. Полный путь необходим для того, что бы  различать
        несколько копий СверхНовой, установленных на одном IP или домене.
     2. Внутреннее название сервера. Используется для подстановки в сообщения.
-    Зачем  вообще  регистрировать  свой  сервер?  В  будующем  планируется  ряд
+    Зачем  вообще  регистрировать  свой  сервер?  В   будущем  планируется  ряд
     возможностей, которые буду доступны только зарегистрированным  серверам.  В
     их число входит (отсортированы по запланированным срокам реализации):
     1. Автоматическое получение чейнджлога
@@ -332,7 +332,7 @@
     На всех экранах строительства (здания, флот, оборона)  включен  планетарный
     навбар
 [~] Флоты
-    Добавлено количество  дейтрия  на  планете  на  страницу  выбора  кораблей,
+    Добавлено количество  дейтерия на  планете  на  страницу  выбора  кораблей,
     страницу выбора точки назначения и страницу своза ресурсов
     Так же на странице выбора кораблей включен планетарный навбар
 [~] Альянсы
@@ -348,7 +348,7 @@
 [~] Чат: Теперь при таймауте чата скрипт поллинга полностью прекращает работу
 [~] Экономика: При расчете  времени  постройки  юнитов  учитывается  не  только
     количество ресурсов, но и  их  качество.  Время  постройки  нормированы  по
-    дейтрию, т.е. постройки с большей долей  низкоуровневых  ресурсов  строятся
+    дейтерию, т.е. постройки с большей долей низкоуровневых  ресурсов  строятся
     быстрее
 [~] Админка: Добавлены label for для всех чекбоксов
 [~] Скины: EpicBlue имеет собственное оформление элементов jQueryUI
@@ -837,7 +837,7 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
      исследование и на постройку кораблей (триггер срабатывает при  наличии  на
      планете Х кораблей одного типа)
      3. За квесты можно выставлять награду - определенного количество одного из
-     ресурсов: металл, кристалл, дейтрий или ТМ.
+     ресурсов: металл, кристалл, дейтерий или ТМ.
      4. Доступ к конструктору квестов осуществляется из меню "Квесты"  страницы
      администрирования. Создание квестов доступно только Администратору сервера
      (auth_level = 3)
@@ -1105,7 +1105,7 @@ Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
     подсказка с описанием ближайшего события
 [+] Список планет: Справа от иконки планеты добавлены три колонки, показывающие
     процент производительности шахт и  синтезаторов:  серый  -  шахта  металла,
-    голубой - синтезатор кристаллов, фиолетовый -  синтезатор  дейтрия.  Высота
+    голубой - синтезатор кристаллов, фиолетовый -  синтезатор дейтерия.  Высота
     колонки пропорциональна проценту производства, а  фон  кодирует  диапазоны:
     желтый - 80-90%, оранжевый - 50-70%%, красный - меньее 50%. На высоту и фон
     колонки влияет ИСКЛЮЧИТЕЛЬНО процент производства, выставленный на странице
@@ -1152,7 +1152,8 @@ Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
     уничтожается
 [%] Ракеты: Исправлена ошибка в процедуре ракетной атаки - технологии  щитов  и
     брони были перепутаны местами
-[%] Экономика: Исправлен глюк с невычитанием дейтрия при отрицательном балансе
+[%] Экономика:  Исправлен   глюк  с  невычитанием  дейтерия  при  отрицательном
+    балансе
 [%] JS: Исправлен глюк в скрипте таймера из-за которого  не  отсчитывало  назад
     ресурсы при переполненных складах
 [%] Империя: Исправлена ошибка отображения маскимального  количества  полей  на
@@ -2291,7 +2292,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [@] На админскую страницу  настройки  сервера  добавлена  возможность  изменять
     следующие параметры: режим игры (Сверхновая или оГейм); количество галактик
     во Вселенной, систем в галактике, планет в системе; максимальное количество
-    КОЛОНИЙ (см. ниже); курсы обмена металла, кристалла, дейтрия и  ТМ;  ссылка
+    КОЛОНИЙ (см. ниже); курсы обмена металла, кристалла, дейтерия и  ТМ; ссылка
     на страницу с правилами.
 [@] Переменная player_max_planets изменена на player_max_colonies и теперь  это
     максимальное количество колоний у игрока (НЕ СЧИТАЯ главную планету)
@@ -2387,7 +2388,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     правила
 
 2010-09-25 02:53
-[!] Начато заполнение будующей энциклопедии  Сверхновой.  Добавлены:  таймлайн,
+[!] Начато заполнение будущей  энциклопедии  Сверхновой.  Добавлены:  таймлайн,
     история мира, описание джамп-технологии, описание кристаллов
 [~] Изменения в коде  для  дальнейшего  облегчения  модификаций.  Подготовка  к
     разделению движка на СН и ОГ
@@ -2729,8 +2730,8 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
 2010-04-26 01:24
 [~] Теперь Инженер улучшает проивзодство энергии на всех генерирующих мощностях
     (включая спутники и солнечные электростанции)
-[~] Во времени постройки  теперь  учитывается  дейтрий.  Соответственно,  время
-    постройки всех юнитов, использующих дейтрий, возросло
+[~] Во времени постройки  теперь  учитывается  дейтерий. Соответственно,  время
+    постройки всех юнитов, использующих дейтерий, возросло
 
 2010-03-03 16:58
 [~] Луна. Максимальный шанс луны уменьшен до 30%. Стоимость лун - 1% на  каждый
