misc-STA-33c1: Reworked how stat display works a bit. Some misc changes and fixes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33c0.2 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33c1 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! В этой версии скорректирована работа партнерской  программы,  а
     так же повторно применен патч для масштабирования ТМ -  для  тех  серверов,
@@ -369,6 +369,14 @@
 [~] Чат: Тэг  Альянса  после  имени  игрока  теперь  указывается  в  квадратных
     скобках, а адресат сообщения - в круглых. Сделано для унификации  написания
     тэга Альянса в движке
+[~] Статистика: Теперь полностью отрабатывается переход со ссылок Вселенной  на
+    страницу статистики: правильно выбирается тип статистики  (игрок/Альянс)  и
+    страница статистики, корректно отрабатываются дропдауны (выбирается  именно
+    текущий тип/страница статистики).
+    Cписок статистики скроллируется либо до выбранного объекта - если позволяет
+    размер страницы, либо максимально вниз, если размер страницы не позволяет
+    Выбранный объект отмечается знаком ">" в столбце рангов
+    Все числа в ячейках отцентрированы по правому краю
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
