misc-REG-33c2: Cosmetical changes to login/registration screens. Changes to statistics update and view to prevent counting Ally-players in stat

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33c1 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+Текущая версия 33c2 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! В этой версии скорректирована работа партнерской  программы,  а
@@ -377,6 +377,8 @@
     размер страницы, либо максимально вниз, если размер страницы не позволяет
     Выбранный объект отмечается знаком ">" в столбце рангов
     Все числа в ячейках отцентрированы по правому краю
+[~]  Логин/Регистрация:  Данные   по   серверу   (размер,   скорость,   онлайн)
+    сгруппированы в один блок и теперь видны так же на странице регистрации
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
