--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,9 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33c2 RC "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+Project "SuperNova.WS" Release 33 "Women Day v2012!"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [@] ВНИМАНИЕ!!! В этой версии скорректирована работа партнерской  программы,  а
     так же повторно применен патч для масштабирования ТМ -  для  тех  серверов,
     где он не был применен  раньше.  Если  вы  вносили  изменения  в  настройки
@@ -443,8 +442,7 @@
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
-=========================================================
-
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] Исправлена работа с большими числами:
       Все числовые значение в HTTP-запросах трактуются как  числа  с  плавающей
       запятой. Все идентификаторы передаются как строки
@@ -512,7 +510,7 @@ Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
-===============================================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Скины: Новый скин "supernova-ivash". Автор - Ivash
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -690,7 +688,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     определются в темлейте
 
 Project "SuperNova.WS" Release 30d4 "Emailing phalanx research antiSSF"
-=======================================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Документация: Добавлен файл с английской версией  инструкции  по  установке
     /docs/install-en.txt (google translated)
@@ -708,7 +706,7 @@ Project "SuperNova.WS" Release 30d4 "Emailing phalanx research antiSSF"
 [%] Локализация: Исправлена ошибка загрузки не-дефолтного языка
 
 Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
-=====================================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
@@ -837,7 +835,7 @@ Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
 
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
-===================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
     написать мне об этом в личку
@@ -992,7 +990,7 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
-=======================================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Чат: Полностью  переписан  внутренний  чат.
       1.  Полностью  переписана  JS-часть.  В  частности  -  AJAX-вызовы   теперь
@@ -1223,7 +1221,7 @@ Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
 
 
 Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
-========================================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
     вложенности каталогов
@@ -1319,7 +1317,7 @@ Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
-===================================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Новый менеджер летящих флотов - теперь рядно-блокирующий,  тразакционный  и
     кэширующий! Обновленный код на порядок уменьшает нагрузку на сервер за счет
@@ -1426,7 +1424,7 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 [@] Добавлена защита от выполнения файлов .INC вне основного кода
 
 Project "SuperNova.WS" Release 25 (2011-01-20 12:24)
-====================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2011-01-20 12:24 V25c2
 [%] Здания: Теперь ссылки "Построить Уровень" и "Уничтожить Уровень" в описании
@@ -1509,7 +1507,7 @@ Project "SuperNova.WS" Release 25 (2011-01-20 12:24)
     ветки примерно до половины
 
 Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
-======================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2011-01-15 17:53
 [~] Экономика: Теперь нельзя ставить в очередь занятые  здания  (лаборатории  -
@@ -1639,7 +1637,7 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
 [+] Файл readme.txt приведен в соответствие с реальным состоянием движка
 
 Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
-======================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [@] Обновлен дамп supernova.sql до версии 24
 
 2011-01-11 21:09
@@ -1671,7 +1669,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     таблицу сильно не распирало
 
 2011-01-10 02:39 Project "SuperNova.WS" (Release 24)
-====================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2011-01-10 02:18
 [+] Добавлено отображение общего времени на постройку всех юнитов в очереди
@@ -2404,7 +2402,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     разделению движка на СН и ОГ
 
 Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
-====================================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] "Сверхновая" стала публичным проектом!  Загрузить  исходный  код  можно  из
     репозитория
     git://github.com/supernova-ws/SuperNova.git
@@ -2766,7 +2764,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     поменялись местами.
 
 Project "SuperNova.WS" Initial Revision
-=======================================
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] Движок Сверхновой базируется на XNova RageRepack v.226
 
 [!] Боевка: альтернативная версия боевого движка - рабочие САБы; новая  система
