feat-SYS-34a0: Compensation patch for server with enabled 'Magic Quotes'

--- a/README
+++ b/README
@@ -142,5 +142,5 @@ Bellitrized game background (Russian):
 
 Copyright notice
 ================
-Сверхновая copyright (c) 2009-2011 Gorlum для http://supernova.ws
+РЎРІРµСЂС…РЅРѕРІР°СЏ copyright (c) 2009-2011 Gorlum РґР»СЏ http://supernova.ws
 Project "SuperNova.WS" copyright (c) 2009-2011 by Gorlum for http://supernova.ws
