--- a/docs/install.txt
+++ b/docs/install.txt
@@ -59,6 +59,12 @@ XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
 версии PHP, или используйте предыдущую версию СН.
 Описание бага: https://bugs.php.net/bug.php?id=50394
 
+СН может работать в окружении  PHP  с  включенными  Magic  Quotes  -  в  движке
+предусмотрены механизмы компенсации для такого случая,  однако  они  далеко  не
+универсальны и не распространяются, например, на ключи массивов. Поэтому крайне
+желательно  отключить  Magic  Quotes  на   стороне   сервера.   Подробнее   см.
+ниже соответствующий подраздел в разделе "Если возникли проблемы..."
+
 Движок разрабатывается под Windows на WAMP Server 2.2. Конфигурация:
   MySQL 5.1.41
   Apache 2.2
@@ -271,6 +277,51 @@ url.rewrite-once = (
 ранней версии, или используйте предыдущюю версию СН!
 
 Ссылка для чтения: https://bugs.php.net/bug.php?id=50394
+
+Magic Quotes
+------------
+Если в отправляемых сообщениях символы \ (обратный слэш) и " (двойная  кавычка)
+заменяются на \\ и \", а символ ' (одинарная кавычка) - на символы \'  или  '',
+это говорит о том, что на сервере  в  настройках  PHP  включен  механизм  Magic
+Quotes. Для  нормальной  работы  движка  необходимо  отключить  этот  механизм.
+Сделать  это  можно   несколькими   путями   (даются   в   порядке   уменьшения
+эффективности):
+1. Напрямую в файле конфигурации сервера PHP "php.ini":
+     magic_quotes_gpc = Off
+     magic_quotes_runtime = Off
+     magic_quotes_sybase = Off
+2.  Если  нет  доступа  к  основному  файлу  конфигурации,  то  многие  хостеры
+   поддерживают  локальное  изменение  настроек  через  ".htaccess".   Добавить
+   указанный файл в корневой каталог движка и прописать в нем строки:
+     php_flag magic_quotes_gpc Off
+     php_flag magic_quotes_runtime Off
+     php_flag magic_quotes_sybase Off
+3. Некоторые хостеры не  поддерживают  ни  один  из  первых  двух  пунктах,  но
+   поддерживают локальные "php.ini". В этом случае  нужно  создать  в  корневом
+   каталоге движка файл "php.ini" и добавить в него строки:
+     magic_quotes_gpc = Off
+     magic_quotes_runtime = Off
+     magic_quotes_sybase = Off
+
+Если хостер не поддерживает ни один  из  вышеуказанных  методов,  то  движок  с
+версии 34a0 по мере сил  постарается  скомпенсировать  "работу"  Magic  Quotes.
+Однако  корректность работы движка НЕ ГАРАНТИРУЕТСЯ!
+Пользователи  более  ранних  версий  могут  самостоятельно  добавить   механизм
+компенсации. Для этого в файл  /includes/init.php  необходимо  в  самом  начале
+вставить такой код:
+if(ini_get('magic_quotes_sybase'))
+{
+  die('SN is incompatible with \'magic_quotes_sybase\' turned on. Disable it in php.ini or .htaccess...');
+}
+if(@get_magic_quotes_gpc())
+{
+  function sn_sys_unmagic_quotes(&$value, $key)
+  {
+    $value = stripslashes($value);
+  }
+  $gpcr = array(&$_GET, &$_POST, &$_COOKIE, &$_REQUEST);
+  array_walk_recursive($gpcr, 'sn_sys_unmagic_quotes');
+}
 
 "Белый экран"
 -------------
