feat-ADM-34a1: 'Impersonate' feature. Full rewrite of 'User list'

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,31 @@
 
 
 
-Текущая версия 34a0
+Текущая версия 34a1
 ~~~~~~~~~~~~~~~~~~~
+[!] Админка: Воплощение
+    Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
+    поуправлять игрой его... эээ... интерфейсом!
+    Воплощение доступно только Администраторам сервера
+    Воплотиться можно только в игрока меньшего уровня - т.е. нельзя Воплотиться
+    в такого же Администратора
+    Нельзя Воплотиться два раза подряд
+    Для Воплощения используйте соответствующую иконку в "Списке игроков"
+    При Воплощении изменяется только  onlinetime  пользователя.  Вся  остальная
+    информация (IP, User-agent итд) сохраняется
+    Если на аккаунте игрока есть ошибки, то попытке Воплощения  будет  выведено
+    сообщение об ошибке, которое увидел бы игрок  на  вашем  месте.  Обновление
+    страницы вернет вас в ваш аккаунт
+    Для Развоплощения используйте соответствующий пункт меню или "Выход"
+[!] Админка: Список игроков
+    Полностью переписан "Список игроков" с использованием PTE
+    Сокращено количество строк локализации
+    Альянсы-игроки больше не выводятся в списке
+    Пишется полный срок бана
+    Для мультиаккаунтов подсвечиваются все адреса с одинаковым IP и  в  скобках
+    добавляется количество игроков с таким же адресом
+    Теперь невозможно удалить  игрока  того  же  уровня  -  для  предотвращения
+    разборок между членами команды одного уровня
 [!] Из данного файла удалена информация о ранних релизах (25й  и  ранее)  -  до
     момента  разделения  чейнджлога  на  девелоперский  и  пользовательский   -
     поскольку информация дважды дублировалась. Её все еще  можно  посмотреть  в
