fix-ADM-34a1.1: Fixed logout when Impersonating user on vacancy

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,15 +11,16 @@
 
 
 
-Текущая версия 34a1
-~~~~~~~~~~~~~~~~~~~
+Текущая версия 34a1.1
+~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
     поуправлять игрой его... эээ... интерфейсом!
     Воплощение доступно только Администраторам сервера
     Воплотиться можно только в игрока меньшего уровня - т.е. нельзя Воплотиться
     в такого же Администратора
-    Нельзя Воплотиться два раза подряд
+    Вложенные  Воплощения   недопустимы:   нельзя   Воплотиться,   будучи   уже
+    Воплощенным в кого-то. Развоплотитесь сначала
     Для Воплощения используйте соответствующую иконку в "Списке игроков"
     При Воплощении изменяется только  onlinetime  пользователя.  Вся  остальная
     информация (IP, User-agent итд) сохраняется
@@ -27,6 +28,8 @@
     сообщение об ошибке, которое увидел бы игрок  на  вашем  месте.  Обновление
     страницы вернет вас в ваш аккаунт
     Для Развоплощения используйте соответствующий пункт меню или "Выход"
+    ВНИМАНИЕ! Перед использованием Воплощения почистите куки в браузере!  Из-за
+    изменений в работе кукесов кэш браузера может содержать дубликаты куков
 [!] Админка: Список игроков
     Полностью переписан "Список игроков" с использованием PTE
     Сокращено количество строк локализации
@@ -36,14 +39,16 @@
     добавляется количество игроков с таким же адресом
     Теперь невозможно удалить  игрока  того  же  уровня  -  для  предотвращения
     разборок между членами команды одного уровня
-[!] Из данного файла удалена информация о ранних релизах (25й  и  ранее)  -  до
-    момента  разделения  чейнджлога  на  девелоперский  и  пользовательский   -
-    поскольку информация дважды дублировалась. Её все еще  можно  посмотреть  в
-    девелоперском чейнджлоге /docs/changelog_dev.txt
+[!] Из данного файла удалена информация о ранних релизах (до момента разделения
+    чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
+    ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
+    можно в девелоперском чейнджлоге /docs/changelog_dev.txt
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
 [%] Локализация/EN: Исправлены очепятки
+[%] Статистика: Исправлено неотображение пола игрока при просмотре статистики с
+    экранов логина/регистрации
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
