--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия 34a1.1
+Текущая версия #version#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
