misc-ALI-34a2: A bit optimized code of Alliance Managment page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -44,6 +44,8 @@
     ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
     можно в девелоперском чейнджлоге /docs/changelog_dev.txt
 
+[~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
+
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
 [%] Локализация/EN: Исправлены очепятки
